Fix timetable spacing and footer to accomodate the membership picing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ ul {
 #membership div {
     background-color: rgba(0, 0, 0, .6);
     width: 33.3%;
-    height: 300px;
+    height: 250px;
     float: left;
     border: 2px solid white;
     box-sizing: border-box;
@@ -83,11 +83,11 @@ ul {
 /* timetable styling */
 
 table {
-    border: #fafafa 5px solid;
+    border: #192435 3px solid;
     width: 50%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
+    margin-top: auto;
 }
 
 th {
@@ -99,7 +99,7 @@ th {
 td {
     text-align: center;
     font-weight: bold;
-    color: #fafafa;
+    color: #192435;
 }
 
 tr {
@@ -107,12 +107,12 @@ tr {
 }
 
 tr:nth-child(even) {
-    background-color: #192435;
+    background-color: #d7f9d3;
 }
 
 caption {
     color: #192435;
-    font-size: 35px;
+    font-size: 30px;
     font-family: Merriweather, sans-serif;
     letter-spacing: 2px;
     font-weight: bold;
@@ -184,7 +184,7 @@ footer {
     background-color: #192435;
     color: white;
     text-align: center;
-    height: 100px;
+    height: 80px;
 }
 
 footer > p {
@@ -192,12 +192,12 @@ footer > p {
     font-size: 120%;
     font-weight: lighter;
     float: left;
-    padding: 40px 0 75px 50px;
+    padding: 30px 0 80px 50px;
 }
 
 footer > a {
     color: #d7f9d3;
     font-size: 200%;
     float: right;
-    padding: 40px 50px 75px 0px;
+    padding: 30px 50px 80px 0px;
 }
